--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/node-cron": "^3.0.11",
+    "axios": "^1.6.2",
     "next": "14.0.3",
     "node-cron": "^3.0.3",
     "node-fetch": "^3.3.2",
